Clases de callback finalizado

--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "trabajar con asincronismo con JS",
   "main": "src/index.js",
   "scripts": {
-    "callback": "node src/callback/index.js"
+    "callback": "node src/callback/index.js",
+    "callback:challenge": "node src/callback/challenge.js"
   },
   "repository": {
     "type": "git",
     "url": "callbacks, promise, async"
   },
   "author": "Gustavo Mañán",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
